gap correction in login-form-wrapper

--- a/src/components/LoginForm/styles.css
+++ b/src/components/LoginForm/styles.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   width: 590px;
   height: 450px;
-  gap: 20px;
+  gap: 30px;
   padding: 60px;
   border: 1px solid black;
   border-radius: 3px;
